2006-07-21  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Add 32x32/actions/Makefile to AC_OUTPUT

	* */actions/Makefile.am:
	* */action/system-run.*:
	Add this new icon from Lapo Calamendrei

	* */apps/Makefile.am:
	* */apps/gnome-run.*:
	Remove this old run icon which is replaced by system-run above

2006-07-21  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/preferences-desktop-screensaver.*:
	* */apps/system-file-manager.*:
	Add icons from Andreas Nilsson

	* 48x48/apps/Makefile.am: Remove old file manager and screensaver icons

	* 32x32/apps/Makefile.am: Install the png not the svg, for 32x32

2006-07-17  Jakub Steiner <jimmac@ximian.com>

	* applications-accessories*:
	* applications-multimedia*:
	* preferences-system*: only bitmaps for now

2006-07-14  Jakub Steiner <jimmac@ximian.com>

	* 32x32/animations/*: spinner at 32x32

2006-07-12  Jakub Steiner <jimmac@ximian.com>

	* scalable/status/appointment-*.*: fix 's' namespace URI
	* scalable/actions/go-home*: align to the grid better

2006-07-11  Rodney Dawes  <dobey@novell.com>

	* 48x48/actions/Makefile.am:
	* 48x48/actions/go-home.*:
	Removed to be replaced with a scalable version of the new style go-home

	* 48x48/categories/Makefile.am:
	* 48x48/categories/applications-internet.*:
	Removed this as a scalable applications-internet already exists

	* scalable/actions/Makefile.am:
	* scalable/actions/go-home.*:
	Add a new scalable version of go-home based on the 22x22 version

2006-07-11  Jakub Steiner <jimmac@ximian.com>

	* scalable/status/appointment-*.*: slight tweaks

2006-07-11  Rodney Dawes  <dobey@novell.com>

	* 48x48/status/Makefile.am:
	* 48x48/status/appointment-*.*:
	Removed these icons as they are replaced by scalable versions

	* scalable/status/Makefile.am:
	* scalable/status/appointment-*.*:
	Add new scalable versions of appointment-{missed,soon} icons

2006-07-10  Rodney Dawes  <dobey@novell.com>

	* NEWS: Update for release and bug fixes
	