@@ -1,3 +1,11 @@
+2006-07-23  Rodney Dawes  <dobey@novell.com>
+
+	* 22x22/apps/preferences-desktop-screensaver.*:
+	* 24x24/apps/preferences-desktop-screensaver.*:
+	Remove the background from this image
+
+	* scalable/devices/Makefile.am: Add missing computer.svg
+
 2006-07-21  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Add 32x32/actions/Makefile to AC_OUTPUT
